--- a/templates/home.html
+++ b/templates/home.html
@@ -11,8 +11,20 @@
                 .content { max-width: 1000px;
                             margin: auto;
                            
-                            padding: 10px;
-                            }
+                            padding: 10px; }
+                           
+
+
+
+                    
+                    p.bottom { position: absolute;
+                                    width: 100%;
+                                    color: #fff;
+                                    line-height: 40px;
+                                    font-size: 0.7em;
+                                    text-align: left;
+                                    bottom:0; }
+                                
             </style>
 
     </head>
@@ -37,8 +49,12 @@
         {% endblock %}
 
         
+<footer>
+  <p class = "bottom"> 
+  <a href="https://www.linkedin.com/in/raj-kumar-88b633188/">by raj</a> </p>
+</footer>
 
-    </div>
+</div>
+
 </body>
-
 </html>
