--- a/templates/home.html
+++ b/templates/home.html
@@ -38,9 +38,7 @@
             <form action="/result" method="POST" > 
 
                 <label  for="mesage" class="form-label">Enter Message </label>
-                <textarea class="form-control" id="Message" name="Message" 
-                    placeholder="Enter (or) Copy paste the message/sms you got to check if message is spam" rows="5">
-                </textarea>
+                <textarea class="form-control" id="Message" name="Message" placeholder="Enter (or) Copy paste the message/sms you got to check if message is spam" rows="5"></textarea>
                 <br>       
                 <input style="white" type="submit" value="Submit"> 
             </form>
